update container module
